Home Button on Screen

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -141,7 +141,7 @@ body {
   right: 240px;
 
 }
-.upperButton, #logoBase, #pewiLogo {
+.upperButton, #logoBase, #pewiLogo, #homebutton {
   height: 3vw;
   position: absolute;
   top: 0.1vw;
@@ -154,6 +154,12 @@ body {
   cursor: pointer;
 }
 
+#homebutton{
+    position: absolute;
+    height: 3vw;
+    left: 1vw;
+    top: 0.5vw;
+}
 .upperButton:hover {
   border-bottom: 2px groove white;
   -webkit-transition-duration: 0.1s;
